--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -3,14 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>hbnb</title>
-	<link rel="stylesheet" href="styles/3-common.css">
+	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
+	<link rel="stylesheet" href="styles/4-filters.css">
 	<link rel="icon" href="images/logo.png" type="icon/png">
 </head>
 <body>
 	<header id="header">
 	</header>
+	<div class="container">
+		<section class="filters">
+			<button class="search-btn">Search</button>
+
+		</section>
+	</div>
 	<footer>
 		<p id="foot">Holberton School</p>
 	</footer>
