--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -14,20 +14,22 @@
 	</header>
 	<div class="container">
 		<section class="filters">
-			<div class="location">
+			<div class="locations">
 				<h3>States</h3>
 				<h4>California, Arizona...</h4>
 				<ul class="popover">
-					<h2>Arizona</h2>
-					<ul>
-						<li>page</li>
-						<li>page2</li>
-					</ul>
-					<li><h2>California</h2></li>
-					<ul>
-						<li>San Francisco</li>
-						<li>Los Alpes</li>
-					</ul>
+					<li><h2>Arizona:</h2>
+						<ul>
+							<li>City1</li>
+							<li>City2</li>
+						</ul>
+					</li>
+					<li><h2>California:</h2>
+						<ul>
+							<li>City1</li>
+							<li>City2</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 			<div class="amenities">
@@ -35,14 +37,12 @@
 				<h4>Internet, Kitchen...</h4>
 				<ul class="popover">
 					<li>Internet</li>
-					<li>Tv</li>
+					<li>TV</li>
 					<li>Kitchen</li>
-					<li>Bath</li>
-	  			</ul>
+					<li>Iron</li>
+				</ul>
 			</div>
 			<button class="search-btn">Search</button>
-
-
 		</section>
 	</div>
 	<footer>
