added task advanced 2

--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
 	<link rel="stylesheet" href="styles/6-filters.css">
-	<link rel="stylesheet" href="styles/8-places.css">
+	<link rel="stylesheet" href="styles/101-places.css">
 	<link rel="icon" href="images/logo.png" type="icon/png">
 </head>
 <body>
@@ -61,6 +61,25 @@
 					in the center of Shangai and next to subway line 1, 1 stop to people square, 2 stops to bund, 3 stops
 					to Jingan Temple
 				</div>
+					<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li class="tv">TV</li>
+						<li class="wifi">WIFI</li>
+						<li class="pets">Pets</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>Reviews</h2>
+					<ul>
+						<li><strong>From Bob Dylan the 27th January 2017</strong></li>
+						<li>Runish is an epic host. Nothing more can say. 5 star!</li>
+					</ul>
+					<ul>
+						<li><strong>From Connor the 4th January 2017</strong></li>
+						<li>Highly recommended!</li>
+					</ul>
+				</div>
 			</article>
 			<article>
 				<h2>Tiny House</h2>
@@ -79,6 +98,22 @@
 					there is paid parking around the corner at the hospital
 					garage and there is also a street nearby where you can park your car for a week.
 				</div>
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li class="pets">Pets</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>Reviews</h2>
+					<ul>
+						<li><strong>From Connor the 4th January 2017</strong></li>
+						<li>
+							Nantia is a great host, very detail oriented and full of attentions.
+							We felt very welcome and enjoyed our stay in this lovely cave house.
+						</li>
+					</ul>
+				</div>
 			</article>
 			<article>
 				<h2>A suite</h2>
@@ -96,6 +131,20 @@
 					in walking distance. If you come with car, street parking is quite easy here but it is restricted. However,
 					there is paid parking around the corner at the hospital
 					garage and there is also a street nearby where you can park your car for a week.
+				</div>
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul>
+						<li class="wifi">WIFI</li>
+						<li class="pets">Pets</li>
+					</ul>
+				</div>
+				<div class="reviews">
+					<h2>Reviews</h2>
+					<ul>
+						<li><strong>From Max the 15 January 2017</strong></li>
+						<li>5 star!</li>
+					</ul>
 				</div>
 			</article>
 		</section>
