added first advanced task

--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>hbnb</title>
+	<meta name="author" content="Juan Ocampo">
+	<meta name="vieport" content="width=device-width, initial-scale=1, user-scalable">
 	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
