--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="author" content="Juan Ocampo">
+	<meta name="vieport" content="width=device-width, initial-scale=1, user-scalable">
 	<title>hbnb</title>
 	<link rel="stylesheet" href="styles/4-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
